[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Louis George Cafe Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Menu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
margin_left = 165.0
margin_top = 183.0
margin_right = 475.0
margin_bottom = 776.0
custom_constants/separation = 80

[node name="V" type="VBoxContainer" parent="V"]
margin_right = 310.0
margin_bottom = 140.0

[node name="Title" type="Label" parent="V/V"]
margin_right = 310.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Gordle"
align = 1

[node name="Subtitle" type="Label" parent="V/V"]
margin_top = 112.0
margin_right = 310.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Wordle in Godot"
align = 1

[node name="V2" type="VBoxContainer" parent="V"]
margin_top = 220.0
margin_right = 310.0
margin_bottom = 593.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="V/V2"]
margin_right = 310.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DailyButton" type="Button" parent="V/V2/V"]
margin_right = 310.0
margin_bottom = 47.0
text = "Daily Gordle"

[node name="Label" type="Label" parent="V/V2/V"]
margin_top = 51.0
margin_right = 310.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "Changes every day
at midnight GMT"
align = 1

[node name="V2" type="VBoxContainer" parent="V/V2"]
margin_top = 140.0
margin_right = 310.0
margin_bottom = 219.0
rect_min_size = Vector2( 310, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomButton" type="Button" parent="V/V2/V2"]
margin_right = 310.0
margin_bottom = 47.0
text = "Random Gordle"

[node name="Label" type="Label" parent="V/V2/V2"]
margin_top = 51.0
margin_right = 310.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "Different every time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="V/V2"]
margin_top = 249.0
margin_right = 310.0
margin_bottom = 296.0
text = "Credits"

[node name="QuitButton" type="Button" parent="V/V2"]
margin_top = 326.0
margin_right = 310.0
margin_bottom = 373.0
text = "Quit"

[connection signal="pressed" from="V/V2/V/DailyButton" to="." method="_on_DailyButton_pressed"]
[connection signal="pressed" from="V/V2/V2/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="V/V2/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="V/V2/QuitButton" to="." method="_on_QuitButton_pressed"]
